feat: wire V3 MySQL query projections
